* Wed Jun 12 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 5.1.3-0
- Allow additional options in sudo::user_specification

* Mon Mar 04 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 5.1.2-0
- Expanded the upper limit of the concat and stdlib Puppet module versions
- Updated URLs in the README.md

* Thu Nov 15 2018 Martin Merfort <martin.merfort@sixt.com> - 5.1.1-0
- Enable support for cmnd def_type

* Fri Oct 12 2018 Nick Miller <nick.miller@onyxpoint.com> - 5.1.0-0
- Added $package_ensure parameter
  - Changed the package from 'latest' to 'installed'
  - It will also respect `simp_options::package_ensure`

* Thu Sep 13 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 5.1.0-0
- Added support for Puppet 5 and OEL
- Modified uspec template to handle the RedHat OS family instead of just RHEL
  or CentOS

* Fri Aug 24 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.1.0-0
- Replaced all references to 'sudosh' with 'su' to reduce future confusion as
  we move away from using sudosh.

* Fri Aug 17 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 5.0.6-0
- Added minimum size for sudo::user_specification::hostlist, because an
  empty list is not permitted.

* Wed Jun 20 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.5-0
- Add both fqdn and hostname to user_specification entries by default

* Fri Feb 09 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 5.0.4-0
- Update upperbound on puppetlabs/concat version to < 5.0.0

* Fri Aug 18 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 5.0.3-0
- Update concat version in metadata.json
- Add concat dependency to build/rpm_metadata/requires

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 5.0.2-0
- Confine puppet version in metadata.json

* Fri Feb 03 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.1-0
- Fixed the validation command on the concat resource to actually validate the
  temp file prior to putting it in place

* Thu Jan 05 2017 Nick Miller <nick.miller@onyxpoint.com> - 5.0.1-0